<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chapresearch.ftcchaprfcs.FCSMainActivity"
    android:background="#030202"
    android:id="@+id/screenLayout"
    android:theme="@style/Theme.AppCompat.NoActionBar">
    <ImageView
        android:id="@+id/chapFCSLogo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/chapfcs"
        android:contentDescription="@string/chapFCSLogo" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoPicker"
        android:background="#030202"
        android:spinnerMode="dropdown"
        android:entries="@array/OpModes"
        android:layout_below="@+id/autoText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teleopText"
        android:layout_marginTop="100dp"
        android:text="@string/teleopText"
        android:textColor="#ffffff"
        android:inputType="none"
        android:layout_alignTop="@+id/autoPicker"
        android:layout_alignLeft="@+id/fieldText"
        android:layout_alignStart="@+id/fieldText"
        android:enabled="false"
        tools:ignore="LabelFor,RtlHardcoded" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/teleOpPicker"
        android:background="#030202"
        android:spinnerMode="dropdown"
        android:entries="@array/OpModes"
        android:layout_below="@+id/teleopText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="RtlHardcoded" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmButton"
        android:id="@+id/confirmButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/teleopText"
        android:layout_alignStart="@+id/teleopText"
        android:textColor="#ffffff"
        android:background="@drawable/confirm_button"
        android:radius="40dp"
        android:clickable="false"
        tools:ignore="RtlHardcoded" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backButton"
        android:id="@+id/backButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffff"
        android:visibility="invisible"
        android:background="@drawable/back_button"
        tools:ignore="RtlHardcoded" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/errorMessage"
        android:layout_above="@+id/teleOpPicker"
        android:layout_alignRight="@+id/autoPicker"
        android:layout_alignEnd="@+id/autoPicker"
        android:visibility="invisible"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:textAlignment="center"
        tools:ignore="RtlHardcoded" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fieldOptions"
        android:background="#030202"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/chapFCSLogo"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="60dp"
        android:layout_toEndOf="@+id/teleopText"
        android:layout_marginTop="15dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/matchNumber"
        android:layout_alignBottom="@+id/matchText"
        android:layout_toEndOf="@+id/matchText"
        android:layout_marginStart="15dp"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match"
        android:id="@+id/matchText"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_below="@+id/fieldText"
        android:layout_alignStart="@+id/fieldText"
        android:elevation="1dp"
        tools:targetApi="lollipop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fieldText"
        android:enabled="false"
        android:text="@string/fieldText"
        android:background="#020202"
        android:inputType="none"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:layout_marginLeft="0dp"
        tools:ignore="LabelFor,RtlHardcoded"
        android:layout_below="@+id/chapFCSLogo"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/autoText"
        android:text="@string/autoText"
        android:textColor="#ffffff"
        android:enabled="false"
        android:inputType="none"
        android:layout_marginTop="15dp"
        tools:ignore="LabelFor"
        android:layout_below="@+id/matchNumber"
        android:layout_alignParentStart="true" />

</RelativeLayout>